--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-# pargenyal.github.io
+
 <!doctype html>
 <html>
 <head></head>
-<body>
+<body style='background-color:#ffcc33'>
 <h1>Mi primera pagina web en github</h1>
 
 </body>
